fix layout bugs

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,5 +1,5 @@
 .users-controller, .sessions-controller{
-  .new-action, .create-action{
+  .new-action, .create-action, .change_password-action{
     .simple_form{
       padding: 0 20px;
       .control-label{
